parser/tests/parser/expressions/invalid_contents/unterminated.mf2
{1 abc
=== spans ===
                    {1 abc
Pattern             ^^^^^^ 0:0-0:6
LiteralExpression   ^^^^^^ 0:0-0:6
Number               ^     0:1-0:2
Number.integral      ^     0:1-0:2
=== diagnostics ===
Placeholder is missing the closing brace. (at @0..6)
  {1 abc
  ^^^^^^
Placeholder expression contains invalid content. (at @3..6)
  {1 abc
     ^^^
=== ast ===
Pattern {
    parts: [
        LiteralExpression {
            span: @0..6,
            literal: Number {
                start: @1,
                raw: "1",
                is_negative: false,
                integral_len: 1,
                fractional_len: None,
                exponent_len: None,
            },
            annotation: None,
            attributes: [],
        },
    ],
}